# rag-wiki

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
notebooks/: 01_prepare_datasets.ipynb  02_create_retriever_training_data.ipynb  03_finetune_retriver.ipynb  04_test_retriver.ipynb  05_test_generator.ipynb  06_rag_pipeline.ipynb
