[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "rag_wiki"
version = "0.0.1"
description = "RAG model based on 1000 selected wikipedia articles"
authors = [
  { name = "Marcin Bagnowski" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "black",
    "flake8",
    "isort",
    "pip",
    "python-dotenv",
    "datasets (>=3.6.0,<4.0.0)",
    "spacy (>=3.8.7,<4.0.0)",
    "wikipedia-api (>=0.8.1,<0.9.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "transformers (>=4.52.3,<5.0.0)",
    "torch (>=2.7.0,<3.0.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "ipywidgets (>=8.1.7,<9.0.0)",
    "wikipedia (>=1.4.0,<2.0.0)",
    "langchain (>=0.3.25,<0.4.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
]
requires-python = "~=3.12.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["rag_wiki"]
force_sort_within_sections = true


